--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -526,42 +526,60 @@ breakpoints:
 
 image_sizes:
   homepage_hero:
-    xs: 1040x780
-    md: 1160x870
+    srcset:
+    - 800x450
+    - 1040x780
+    - 1160x870
   # homepage program spotlight
   program_spotlight:
-    xs: 400x225
-    sm: 640x360
-    md: 1120x630
+    srcset:
+    - 400x225
+    - 640x360
+    - 1120x630
   # related basic content/events/stories
   card:
-    xs: 160x90
-    sm: 320x180
-    md: 640x360
+    srcset:
+    - 160x90
+    - 320x180
+    - 640x360
+    sizes: '(max-width: 580px) 160px, (max-width: 960px) 320px, 640px'
   # list of event/story
   teaser:
-    xs: 128x72
-    sm: 160x90
-    md: 240x135
+    srcset:
+    - 128x72
+    - 160x90
+    - 240x135
+    sizes: '(max-width: 580px) 128px, (max-width: 960px) 160px, 240px'
   teaser_featured:
-    xs: 400x225
-    sm: 640x360
-    md: 768x432
+    srcset:
+    - 400x225
+    - 640x360
+    - 768x432
   # aof, audience, faculty in the field top
   page_hero:
-    xs: 640x360
-    sm: 960x540
+    srcset:
+    - 360x180
+    - 640x360
+    - 960x540
   # page image
   page_image:
-    xs: 400x225
-    sm: 640x360
-    md: 960x540
-    lg: 1440x810
+    srcset:
+    - 400x225
+    - 640x360
+    - 960x540
+    - 1440x810
   panel:
-    xs: 400x225
-    sm: 640x360
-    md: 960x540
-    lg: 1440x810
+    srcset:
+    - 400x225
+    - 640x360
+    - 960x540
+    - 1440x810
+  notfound:
+    srcset:
+    - 400x225
+    - 640x360
+    - 960x540
+    - 1440x810
   # program_panel:
   #   xs: 640x360
   #   sm: 960x540
@@ -569,46 +587,63 @@ image_sizes:
   #   lg: 1440x810
   # video paragraph
   video:
-    xs: 400x225
-    sm: 640x360
-    md: 1280x720
+    srcset:
+    - 400x225
+    - 640x360
+    - 1280x720
   #  image paragraph
   image:
-    xs: 400x225
-    sm: 640x360
-    md: 1280x720
+    srcset:
+    - 400x225
+    - 640x360
+    - 1280x720
   # publication: this is skipped for now
   profile_spotlight_item: # 4:3
-    xs: 90x120
-    sm: 144x192
-    md: 288x384
+    srcset:
+    - 90x120
+    - 144x192
+    - 288x384
+    sizes: '(max-width: 580px) 90px, (max-width: 960px) 144px, 288px'
   profile_teaser: # 4:3
-    xs: 90x120
-    sm: 144x192
+    srcset:
+    - 90x120
+    - 144x192
+    sizes: '(max-width: 580px) 90px, 144px'
   profile_detail:
-    xs: 300x400
-    sm: 432x576
+    srcset:
+    - 300x400
+    - 432x576
+    sizes: '(max-width: 580px) 300px, 432px'
   speaker: # 4:3
-    xs: 144x192
+    src: 144x192
   event_teaser:
-    xs: 128x72
-    sm: 160x90
-    md: 240x135
+    srcset:
+    - 128x72
+    - 160x90
+    - 240x135
   event_detail:
-    xs: 640x360
-    sm: 768x432
+    srcset:
+    - 640x360
+    - 768x432
   story_detail:
-    xs: 400x225
-    sm: 640x360
-    md: 1280x720
+    srcset:
+    - 400x225
+    - 640x360
+    - 960x540
+    - 1280x720
   top_level:
-    xs: 640x360
-    sm: 1280x720
-    md: 1440x810
+    srcset:
+    - 400x225
+    - 640x360
+    - 960x540
+    - 1280x720
+    - 1440x810
   grid_nav:
-    xs: 128x72
-    sm: 160x90
-    md: 400x225
-    lg: 320x180
+    srcset:
+    - 128x72
+    - 160x90
+    - 400x225
+    - 320x180
+    sizes: '(max-width: 580px) 128px, (max-width: 960px) 160px, (max-width: 1200px) 400px, 320px'
   # TODO: slidershow with lazy <picture>?
 
