--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -524,21 +524,20 @@ breakpoints:
   lg: 1200
   xl: 1440
 
-# if sizes is not preset, default is 100vw
+# If sizes is not preset, default size should be '(max-width: <LARGESTWIDTH>px), 100vw, <LARGESTWIDTH>px'.
+# Could the default be programmatically be set if the sizes field is blank?
 image_sizes:
   homepage_hero:
     srcset:
     - 800x450
     - 1040x545
     - 1200x675
-    sizes: '(max-width: 1200px) 100vw, 1200px'
   # homepage program spotlight
   program_spotlight:
     srcset:
     - 400x225
     - 640x360
     - 1120x630
-    sizes: '(max-width: 1120px) 100vw, 1120px'
   # related basic content/events/stories
   card:
     srcset:
@@ -566,35 +565,30 @@ image_sizes:
     - 360x180
     - 640x360
     - 960x540
-    sizes: '(max-width: 960px) 100vw, 960px'
   panel:
     srcset:
     - 400x225
     - 640x360
     - 960x540
     - 1440x810
-    sizes: '(max-width: 1440px) 100vw, 1440px'
   notfound:
     srcset:
     - 400x225
     - 640x360
     - 960x540
     - 1440x810
-    sizes: '(max-width: 1440px) 100vw, 1440px'
   # video paragraph
   video:
     srcset:
     - 400x225
     - 640x360
     - 1280x720
-    sizes: '(max-width: 1280px) 100vw, 1280px'
   #  image paragraph
   image:
     srcset:
     - 400x225
     - 640x360
     - 1280x720
-    sizes: '(max-width: 1280px) 100vw, 1280px'
   # publication: this is skipped for now
   profile_spotlight_item: # 4:3
     srcset:
@@ -634,7 +628,6 @@ image_sizes:
     - 640x360
     - 960x540
     - 1040x585
-    sizes: '(max-width: 1040px) 100vw, 1040px'
   top_level:
     srcset:
     - 400x225
@@ -642,7 +635,6 @@ image_sizes:
     - 960x540
     - 1280x720
     - 1440x810
-    sizes: '(max-width: 1440px) 100vw, 1440px'
   grid_nav:
     srcset:
     - 128x72
