dedupe image sizes that use the same dimensions

--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -552,7 +552,7 @@ image_sizes:
     - 160x90
     - 240x135
     sizes: '(max-width: 580px) 128px, (max-width: 960px) 160px, 240px'
-  teaser_featured:
+  featured:
     srcset:
     - 400x225
     - 640x360
@@ -608,20 +608,6 @@ image_sizes:
     sizes: '(max-width: 580px) 300px, 432px'
   speaker: # 3:4
     src: 144x192
-  basic_content_detail:
-    srcset:
-    - 400x225
-    - 640x360
-    - 800x450
-    - 960x540
-    sizes: '(max-width: 960px) 100vw, 800px'
-  event_detail:
-    srcset:
-    - 400x225
-    - 640x360
-    - 800x450
-    - 960x540
-    sizes: '(max-width: 960px) 100vw, 800px'
   story_detail:
     srcset:
     - 400x225
