--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp build --production",
+    "build:svg": "gulp svg && gulp copy:svg",
     "deploy": "gulp deploy",
     "lint": "eslint src/**"
   },
@@ -37,6 +38,7 @@
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-prettify": "^0.5.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^3.1.0",
     "gulp-size": "^2.1.0",
