--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -190,15 +190,15 @@ footer_nav:
       - text: Emergency
         url: /institute/offices-services/security
       - text: Academic Resources
-        url: /institute/academics/academic-resources     
+        url: /institute/academics/academic-resources   
       - text: Campus Map
         url: http://www.myatlascms.com/map/index.php?id=972
       - text: Directory
-        url: https://directory.miis.edu        
+        url: https://directory.miis.edu       
       - text: Events Calendar
         url: /institute/events
       - text: Library
-        url: /institute/academics/library         
+        url: /institute/academics/library       
       - text: Employment
         url: https://middlebury.peopleadmin.com
   - title:
@@ -208,7 +208,7 @@ footer_nav:
       - text: BannerWeb
         url: https://ssb-prod.ec.middlebury.edu/PNTR/twbkwbis.P_WWWLogin?        
       - text: EthicsPoint
-        url: https://secure.ethicspoint.com/domain/media/en/gui/28296/index.html          
+        url: https://secure.ethicspoint.com/domain/media/en/gui/28296/index.html      
       - text: WebMail
         url: https://mail.middlebury.edu/owa/auth/logon.aspx
       - text: Zoom Web Conferencing
@@ -247,12 +247,26 @@ contact_social_links:
     slug: instagram
 
 missions:
-  - text: I want to take on the world’s most important sustainability challenges.
-  - text: I want to create positive social change in international business
-  - text: I want to teach English to students around the world.
-  - text: I want to help people find hope after loss.
-  - text: I want to cultivate the self-worth of women around the world.
-  - text: I want to create positive social change in international business
+  - text: help build a more just world.
+    url: https://www.middlebury.edu/institute/academics/degree-programs/international-policy-development
+  - text: be a catalyst for social change.
+    url: https://www.middlebury.edu/institute/academics/degree-programs/public-administration
+  - text: take on the world’s most important sustainability challenges.
+    url: https://www.middlebury.edu/institute/academics/degree-programs/international-environmental-policy
+  - text: bridge cultures through international education.
+    url: https://www.middlebury.edu/institute/academics/degree-programs/international-education-management
+  - text: promote global prosperity.
+    url: https://www.middlebury.edu/institute/academics/degree-programs/international-trade-economic-diplomacy
+  - text: make the world safe from violent extremism and weapons of mass destruction.
+    url: https://www.middlebury.edu/institute/academics/degree-programs/nonproliferation-terrorism-studies
+  - text: build understanding through language.
+    url: https://www.middlebury.edu/institute/academics/degree-programs/language-education
+  - text: facilitate communication worldwide
+    url: https://www.middlebury.edu/institute/academics/degree-programs/translation-interpretation
+  - text: open global markets through technology
+    url: https://www.middlebury.edu/institute/academics/degree-programs/translation-localization-management
+  - text: teach English to students around the world.
+    url: https://www.middlebury.edu/institute/academics/degree-programs/language-education
 
 programs:
   - title: International Environmental Policy
