--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "enquire.js": "^2.1.6",
+    "intersection-observer": "^0.5.0",
     "normalize.css": "^5.0.0",
     "swiper": "^3.4.2"
   }
