Update institutional footer links to match https://github.com/middlebury/drupal8/commit/ca03e7b5c879f56f12b7358b47034d239546eb84

--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -241,11 +241,10 @@ footer_nav:
 
 
 secondary_footer_nav:
-  - text: Lorem ipsum
-  - text: Dolor site amet
-  - text: Adipsing
-  - text: Conssueretal Apidsing
-  - text: Lorem ipsum dolor sit
+  - text: Privacy Policy
+    href: http://www.middlebury.edu/about/privacy
+  - text: Copyright
+    href: http://www.middlebury.edu/about/copyright
 
 social_links:
   - text: LinkedIn
