--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -214,18 +214,16 @@ footer_nav:
     items:
       - text: Emergency
         url: /institute/offices-services/security
-      - text: Academic Resources
-        url: /institute/academics/academic-resources
       - text: Campus Map
         url: http://www.myatlascms.com/map/index.php?id=972
       - text: Directory
         url: https://directory.miis.edu
-      - text: Events Calendar
-        url: /institute/events
-      - text: Library
-        url: /institute/academics/library
       - text: Employment
         url: https://middlebury.peopleadmin.com
+      - text: State Authorization
+        url: https://www.middlebury.edu/institute/institute-approach/about/strf
+      - text: Website Support
+        url: http://go.middlebury.edu/sitehelp
       - text: Offices and Services
         url: /institute/offices-services
       - text: BannerWeb
