add missing periods to mission modal items

--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -285,9 +285,9 @@ missions:
     url: https://www.middlebury.edu/institute/academics/degree-programs/nonproliferation-terrorism-studies
   - text: build understanding through language.
     url: https://www.middlebury.edu/institute/academics/degree-programs/language-education
-  - text: facilitate communication worldwide
+  - text: facilitate communication worldwide.
     url: https://www.middlebury.edu/institute/academics/degree-programs/translation-interpretation
-  - text: open global markets through technology
+  - text: open global markets through technology.
     url: https://www.middlebury.edu/institute/academics/degree-programs/translation-localization-management
   - text: teach English to students around the world.
     url: https://www.middlebury.edu/institute/academics/degree-programs/language-education
