--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -284,6 +284,30 @@ missions:
   - text: teach English to students around the world.
     url: https://www.middlebury.edu/institute/academics/degree-programs/language-education
 
+students:
+  - title: Anna Galbraith
+    type: Student
+    program: International Environmental Policy
+    image: anna-galbraith-582x786.jpg
+  - title: Jorge Silva
+    type: Student
+    program: Nonproliferation and Terrorism Studies
+    image: jorge-silva-582x786.jpg
+  - title: Justin Arrington
+    type: Student
+    program: International Trade and Economic Diplomacy
+    image: justin-arrington-582x786.jpg
+  - title: Anna Galbraith
+    type: Student
+    program: international environmental policy
+    text: |
+      <p><strong>Where did you earn your undergraduate degree?</strong></p>
+      <p>I have BA degrees in humanities and Arabic with a minor in mathematics from Michigan State University.</p>
+      <p><strong>Why did you choose the Middlebury Institute?</strong></p>
+      <p>The Institute program allowed me to study NPTS while still continuing with my Arabic studies.</p>
+    image: anna-galbraith-582x786.jpg
+
+
 programs:
   - title: International Environmental Policy
     image: maiep
