--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "chart.js": "^2.7.1",
+    "flatpickr": "^4.3.2",
     "intersection-observer": "^0.5.0",
     "normalize.css": "^5.0.0",
     "object-fit-images": "^3.2.3",
