rename icon build tasks to be clearer
These tasks only create svg sprite for icons- prefixed files so it should be named as so

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp build --production",
-    "build:svg": "gulp svg && gulp copy:svg",
+    "build:icons": "gulp icons && gulp copy:icons",
     "deploy": "gulp deploy",
     "lint": "eslint src/**"
   },
