add gulp dev command
This is to be used with passing --themeDir argument so assets can be output to Drupal
theme directory instead of to dist folder. This makes iterating on css/js easier when
developing on a server like hammer or saw.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gulpfile.babel.js",
   "scripts": {
     "start": "gulp",
+    "dev": "gulp dev",
     "build": "gulp build --production",
     "build:icons": "gulp icons && gulp copy:icons",
     "deploy": "gulp deploy",
