check for production flag before changing output paths during dev task
Because the existing deploy task is slightly different, we don't
want to change the output paths on deploy.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "gulp dev",
     "build": "gulp build --production",
     "build:icons": "gulp icons && gulp copy:icons",
-    "deploy": "gulp deploy",
+    "deploy": "gulp deploy --production",
     "lint": "eslint src/**"
   },
   "repository": {
