--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "browser-sync": "^2.23.6",
     "browserify": "^14.0.0",
     "del": "^2.2.2",
+    "dotenv": "^6.0.0",
     "eslint": "^3.15.0",
     "eslint-config-drupal": "^3.0.0",
     "gulp": "^3.9.1",
