--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "gulp",
     "dev": "gulp dev",
     "build": "gulp build --production",
+    "build:pardot": "npm run build -- --imagesDir=https://www.middlebury.edu/institute/themes/custom/institute_theme/images/ && gulp replace:imageurls --imagesDir=https://www.middlebury.edu/institute/themes/custom/institute_theme/images/",
     "build:icons": "gulp icons && gulp copy:icons",
     "deploy": "gulp deploy --production",
     "lint": "eslint src/**"
