--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/middlebury/frontend/issues"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
     "babelify": "^7.3.0",
     "beeper": "^1.1.1",
     "browser-sync": "^2.23.6",
