Update scholarship link in Giving section of the header menu.

--- a/src/data/data.yml
+++ b/src/data/data.yml
@@ -193,8 +193,8 @@ site_nav:
           url: /institute/giving/donor-recognition
         - text: Plan Your Legacy
           url: /institute/giving/plan-your-legacy
-        - text: Carl Fehlandt Scholarship
-          url: /institute/giving/carl-fehlandt-scholarship
+        - text: Jason Spindler Frontier Market Scouts Scholarship
+          url: /institute/jason-spindler-frontier-market-scouts-scholarship
         - text: Meet the Team
           label: Meet the Giving Team
           url: /institute/giving/team
