--- a/package.json
+++ b/package.json
@@ -20,27 +20,28 @@
     "url": "https://github.com/middlebury/frontend/issues"
   },
   "devDependencies": {
+    "autoprefixer": "^9.5.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babelify": "^7.3.0",
     "beeper": "^1.1.1",
     "browser-sync": "^2.23.6",
     "browserify": "^14.0.0",
+    "cssnano": "^4.1.10",
     "del": "^2.2.2",
     "dotenv": "^6.0.0",
     "eslint": "^3.15.0",
     "eslint-config-drupal": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
     "gulp-combine-mq": "^0.4.0",
     "gulp-csscomb-lint": "^0.0.2",
-    "gulp-cssnano": "^2.1.2",
     "gulp-data": "^1.2.1",
     "gulp-eslint": "^3.0.1",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.2.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-prettify": "^0.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
