--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.8",
     "js-yaml": "^3.8.2",
+    "postcss-url": "^8.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^6.6.0"
