--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ node_js:
   - '8.12.0'
 script:
   - npm run build
+  - gulp replace:imageurls --imagesDir="/institute/themes/custom/institute_theme/images/"
 
 # auto deploy dist folder to github branch so frontend deploys can git pull assets instead of rebuilding.
 # See #159
