--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babelify": "^7.3.0",
     "beeper": "^1.1.1",
     "browser-sync": "^2.23.6",
     "browserify": "^14.0.0",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "babelify": "^10.0.0",
     "cssnano": "^4.1.10",
     "del": "^2.2.2",
     "dotenv": "^6.0.0",
