--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chart.js": "^2.7.1",
     "intersection-observer": "^0.5.0",
     "normalize.css": "^5.0.0",
+    "micromodal": "git+https://git@github.com/zebapy/micromodal.git",
     "object-fit-images": "^3.2.3",
     "pikaday": "^1.7.0",
     "swiper": "^4.1.0"
