--- a/package.json
+++ b/package.json
@@ -61,8 +61,9 @@
   "dependencies": {
     "chart.js": "^2.7.1",
     "intersection-observer": "^0.5.0",
-    "normalize.css": "^5.0.0",
+    "mdn-polyfills": "^5.18.0",
     "micromodal": "git+https://git@github.com/zebapy/micromodal.git",
+    "normalize.css": "^5.0.0",
     "object-fit-images": "^3.2.3",
     "pikaday": "^1.7.0",
     "swiper": "^4.1.0"
