--- a/package.json
+++ b/package.json
@@ -67,5 +67,10 @@
     "object-fit-images": "^3.2.3",
     "pikaday": "^1.7.0",
     "swiper": "^4.1.0"
+  },
+  "resolutions": {
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.11",
+    "minimatch": "^3.0.2"
   }
 }
