--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "autoprefixer": "^9.6.0",
-    "babelify": "^10.0.0",
     "beeper": "^2.0.0",
     "browser-sync": "^2.26.7",
-    "browserify": "^16.2.3",
     "cssnano": "^4.1.10",
     "del": "^4.1.1",
     "dotenv": "^8.0.0",
@@ -50,16 +48,22 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-sprites": "^4.1.2",
     "gulp-twig": "^1.2.0",
-    "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
     "js-yaml": "^3.13.1",
     "postcss-url": "^8.0.0",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
+    "rollup": "^0.67.0",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-filesize": "^6.0.1",
+    "rollup-plugin-ignore": "^1.0.4",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-sizes": "^0.5.1",
+    "rollup-plugin-uglify": "^6.0.0",
     "yargs": "^13.2.4"
   },
   "dependencies": {
     "chart.js": "^2.7.1",
+    "countup.js": "^2.0.4",
     "intersection-observer": "^0.5.0",
     "mdn-polyfills": "^5.18.0",
     "micromodal": "git+https://git@github.com/zebapy/micromodal.git",
